sources/kube-system/network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: ingress-keda-dns
spec:
  ingress:
    - from:
      - namespaceSelector:
          matchLabels:
            kubernetes.io/metadata.name: keda
        podSelector:
          matchLabels: {}
      ports:
      - protocol: TCP
        port: 53
      - protocol: UDP
        port: 53
  podSelector: 
    matchLabels: 
      kubernetes.io/metadata.name: kube-system
  policyTypes:
  - Ingress
